--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -28,10 +28,10 @@
           {% assign topic_title = topic | append: '_title' %}
           {% assign topic_list = topic | append: '_list' %}
           {% if site.data.menu[topic_title] %}
-            <p>{{ site.data.menu[topic_title] }}</p>
+            <span class="md-sys-typescale-title-large">{{ site.data.menu[topic_title] }}</span>
             {% if site.data.menu[topic_list] %}
               {% for item in site.data.menu[topic_list] %}
-                <button type="button" class="micl-button-text-xs" command="close" commandfor="hhrimenu" onclick="window.location.href='{{ item.link }}'">
+                <button type="button" class="micl-button-text-s" command="close" commandfor="hhrimenu" onclick="window.location.href='{{ item.link }}'">
                   <span class="micl-button__icon hhri-icon" aria-hidden="true">{{ item.icon }}</span>
                   <span>{{ item.title }}</span>
                 </button>
