--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,15 +10,42 @@
     <link rel="alternate" hreflang="es" href="https://henkpb.github.io/hhri/es">
     <link rel="alternate" hreflang="x-default" href="https://henkpb.github.io/hhri">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:FILL@0..1&amp;icon_names=menu,menu_open&amp;display=block">
     <link rel="stylesheet" href="assets/css/theme.css">
     <link rel="stylesheet" href="assets/css/micl.css">
     <link rel="stylesheet" href="assets/css/hhri.css">
     <link rel="stylesheet" href="assets/css/home.css">
   </head>
   <body class="micl-window dark">
+
+    <dialog id="hhrimenu" class="micl-navigationrail" closedby="closerequest">
+      <div class="micl-navigationrail__headline">
+        <button type="button" class="micl-iconbutton-standard-s micl-button--toggle material-symbols-outlined" command="close" commandfor="hhrimenu" data-miclalt="menu_open">menu</button>
+      </div>
+      <div class="micl-navigationrail__content">
+        {% assign topics = 'manual|theme|resource|etraining' | split: '|' %}
+        {% for topic in topics %}
+          {% assign topic_title = topic | append: '_title' %}
+          {% assign topic_list = topic | append: '_list' %}
+          {% if site.data.menu[topic_title] %}
+            <p class="md-sys-typescale-title-large">{{ site.data.menu[topic_title] }}</p>
+            {% if site.data.menu[topic_list] %}
+              {% for item in site.data.menu[topic_list] %}
+                <button type="button" class="micl-button-text-s" command="close" commandfor="hhrimenu" onclick="window.location.href='{{ item.link }}'">
+                  <span class="micl-button__icon hhri-icon" aria-hidden="true">{{ item.icon }}</span>
+                  <span>{{ item.title }}</span>
+                </button>
+              {% endfor %}
+            {% endif %}
+          {% endif %}
+        {% endfor %}
+      </div>
+    </dialog>
+
     <main class="micl-body">
       <section class="micl-pane">
         <header class="micl-pane__columns micl-pane__columns--stacked-to-expanded">
+          <button type="button" class="micl-appbar__leading-icon micl-iconbutton-standard-s material-symbols-outlined" command="show-modal" commandfor="hhrimenu">menu</button>
           <div class="micl-pane__column">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 128 160" style="enable-background:new 0 0 128 160;" xml:space="preserve">
               <g>
