--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -142,10 +142,10 @@
         <span>{{ site.data.footer.about_text }}</span>
       </div>
       <div>
-        <p>{{ site.data.footer.social_text }}</p>
+        <p>{{ site.data.footer.social_title }}</p>
         <div class="hhri-socials">
-          {% for social in site.data.footer.social_links %}
-            <a href="{{ social.link }}" target="_blank" class="micl-iconbutton-standard-m" aria-label="{{ social.name }}">{{ social.icon }}</a>
+          {% for social in site.data.footer.social_list %}
+            <a href="{{ social.link }}" target="_blank" class="micl-iconbutton-standard-m" aria-label="{{ social.title }}">{{ social.icon }}</a>
           {% endfor %}
         </div>
       </div>
