--- a/_layouts/conference.html
+++ b/_layouts/conference.html
@@ -55,7 +55,9 @@
             <span class="md-sys-typescale-headline-small">{{ page.subtitle }}</span>
           </div>
         </hgroup>
-        {{ content }}
+        <div class="md-sys-typescale-body-medium">
+          {{ content }}
+        </div>
       </section>
       <section class="micl-pane micl-pane--hidden-to-expanded">
         <div class="hhri-onpage" class="md-sys-typescale-body-large">
