--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,3 +4,11 @@
 
 @import "base";   # Imports _sass/_base.scss
 @import "theme";  # Imports _sass/_theme.scss
+
+@font-face {
+  font-family: 'hhri';
+  src: url('hhri.ttf?4cg1h6') format('truetype'), url('hhri.woff?4cg1h6') format('woff'), url('hhri.svg?4cg1h6#hhri') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
