--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -12,9 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:FILL@0..1&amp;icon_names=article_shortcut,menu,menu_open&amp;display=block">
     <link rel="stylesheet" href="{{ '/assets/css/theme.css' | relative_url }}">
-    <link rel="stylesheet" href="{{ '/assets/css/micl.css' | relative_url }}">
-    <link rel="stylesheet" href="{{ '/assets/css/hhri.css' | relative_url }}">
-    <link rel="stylesheet" href="{{ '/assets/css/page.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
   </head>
   <body class="micl-window dark">
 
