--- a/_layouts/conference.html
+++ b/_layouts/conference.html
@@ -13,8 +13,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:FILL@0..1&amp;icon_names=article_shortcut,menu,menu_open&amp;display=block">
     <link rel="stylesheet" href="{{ '/assets/css/theme.css' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/css/micl.css' | relative_url }}">
-    <link rel="stylesheet" href="{{ '/assets/css/hhri.css' | relative_url }}">
-    <link rel="stylesheet" href="{{ '/assets/css/page.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
   </head>
   <body class="micl-window dark">
 
