--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,8 +2,8 @@
 # Only this empty Front Matter block is needed
 ---
 
-@import "base";   # Imports _sass/_base.scss
-@import "theme";  # Imports _sass/_theme.scss
+@import "base";
+@import "theme";
 
 @font-face {
   font-family: 'hhri';
