--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -111,7 +111,7 @@
 
     <footer class="md-sys-typescale-body-medium">
       <div>
-        <span>{{ site.data.footer.about_text }}</span>
+        <p>{{ site.data.footer.about_text }}</p>
       </div>
       <div>
         <p>{{ site.data.footer.social_title }}</p>
