--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -65,10 +65,10 @@ html {
   padding: 32px 16px;
   border-radius: 12px;
   background-color: var(--md-sys-color-tertiary-container);
-  color: var(--md-sys-color-on-tertiary-container);
 
-  p {
+  a, p {
     margin: 0;
+    color: var(--md-sys-color-on-tertiary-container);
   }
   a:not(:hover) {
     text-decoration: none;
