--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -47,13 +47,13 @@
         <header class="micl-appbar">
           <button type="button" class="micl-appbar__leading-icon micl-iconbutton-standard-s material-symbols-outlined" command="show-modal" commandfor="hhrimenu">menu</button>
         </header>
-        <hgroup>
+        <header>
           <div class="hhri-icon">{{ page.icon }}</div>
           <div>
             <h1 class="md-sys-typescale-display-large">{{ page.title }}</h1>
             <span class="md-sys-typescale-headline-small">{{ page.subtitle }}</span>
           </div>
-        </hgroup>
+        </header>
 
         {% for path_node in path_nodes %}
           {% assign section = path_node | remove: '/' %}
