--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -55,43 +55,45 @@
           </div>
         </header>
 
-        {% for path_node in path_nodes %}
-          {% assign section = path_node | remove: '/' %}
-          {% assign section_title = section | append: '_title' %}
-          {% assign section_text = section | append: '_text' %}
-          <div id="section{{ forloop.index}}" class="hhri-theme-section">
-            <h2 class="md-sys-typescale-headline-large">{{ page[section_title] }}</h2>
-            <p class="md-sys-typescale-body-large">{{ page[section_text] }}</p>
-            
-            {% for item in site.theme_gbv %}
-              {% if item.path contains path_node %}
-                {% if item.title %}
-                  <details class="micl-card-filled hhri-theme-item" tabindex="0">
-                    <summary>
-                      <span class="micl-card__headline-s">
-                        <span class="micl-heading md-sys-typescale-emphasized-headline-small">{{ item.title }}</span>
-                      </span>
-                      {% if item.year or item.organization %}
-                        <span class="micl-card__supporting-text">
-                          {{ item.year }}
-                          {% if item.year and item.organization %} | {% endif %}
-                          {{ item.organization }}
+        <div class="hhri-sections">
+          {% for path_node in path_nodes %}
+            {% assign section = path_node | remove: '/' %}
+            {% assign section_title = section | append: '_title' %}
+            {% assign section_text = section | append: '_text' %}
+            <div id="section{{ forloop.index}}" class="hhri-theme-section">
+              <h2 class="md-sys-typescale-headline-large">{{ page[section_title] }}</h2>
+              <p class="md-sys-typescale-body-large">{{ page[section_text] }}</p>
+              
+              {% for item in site.theme_gbv %}
+                {% if item.path contains path_node %}
+                  {% if item.title %}
+                    <details class="micl-card-filled hhri-theme-item" tabindex="0">
+                      <summary>
+                        <span class="micl-card__headline-s">
+                          <span class="micl-heading md-sys-typescale-emphasized-headline-small">{{ item.title }}</span>
                         </span>
-                      {% endif %}
-                    </summary>
-                    <div class="micl-card__content md-sys-typescale-body-medium">
-                      {{ item.content }}
-                      {% if item.link %}
-                        <hr class="micl-divider">
-                        <a href="{{ item.link }}" class="micl-button-text-s" target="_blank">View Source</a>
-                      {% endif %}
-                    </div>
-                  </details>
+                        {% if item.year or item.organization %}
+                          <span class="micl-card__supporting-text">
+                            {{ item.year }}
+                            {% if item.year and item.organization %} | {% endif %}
+                            {{ item.organization }}
+                          </span>
+                        {% endif %}
+                      </summary>
+                      <div class="micl-card__content md-sys-typescale-body-medium">
+                        {{ item.content }}
+                        {% if item.link %}
+                          <hr class="micl-divider">
+                          <a href="{{ item.link }}" class="micl-button-text-s" target="_blank">View Source</a>
+                        {% endif %}
+                      </div>
+                    </details>
+                  {% endif %}
                 {% endif %}
-              {% endif %}
-            {% endfor %}
-          </div>
-        {% endfor %}
+              {% endfor %}
+            </div>
+          {% endfor %}
+        </div>
 
       </section>
       <section class="micl-pane micl-pane--hidden-to-expanded">
