--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -55,7 +55,7 @@
           </div>
         </header>
 
-        <div class="hhri-sections">
+        <div class="hhri-theme-sections">
           {% for path_node in path_nodes %}
             {% assign section = path_node | remove: '/' %}
             {% assign section_title = section | append: '_title' %}
