--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -69,6 +69,11 @@
   h2 {
     white-space: normal;
     color: var(--md-sys-color-on-secondary-container);
+    font-family: var(--md-sys-typescale-emphasized-title-medium-font);
+    font-size: var(--md-sys-typescale-emphasized-title-medium-size);
+    line-height: var(--md-sys-typescale-emphasized-title-medium-line-height);
+    font-weight: var(--md-sys-typescale-emphasized-title-medium-weight);
+    letter-spacing: var(--md-sys-typescale-emphasized-title-medium-tracking);
   }
   .micl-card__content {
     color: var(--md-sys-color-on-secondary-container);
