--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,8 +43,10 @@
 
     <main class="micl-body">
       <section class="micl-pane">
-        <header class="micl-pane__columns micl-pane__columns--stacked-to-expanded">
+        <header class="micl-appbar">
           <button type="button" class="micl-appbar__leading-icon micl-iconbutton-standard-s material-symbols-outlined" command="show-modal" commandfor="hhrimenu">menu</button>
+        </header>
+        <header class="micl-pane__columns micl-pane__columns--stacked-to-expanded">
           <div class="micl-pane__column">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 128 160" style="enable-background:new 0 0 128 160;" xml:space="preserve">
               <g>
