--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -41,19 +41,28 @@
 .micl-pane:has(.hhri-news-section) {
   row-gap: 48px;
 
-  &> .micl-card-outlined {
+  &> .micl-card-filled {
     padding-block-start: 16px;
+    background-color: var(--md-sys-color-secondary-container);
 
+    h2,
+    .micl-card__supporting-text {
+      color: var(--md-sys-color-on-secondary-container);
+    }
     .micl-list {
       --md-sys-list-item-container-color: transparent;
       display: flex;
       flex-wrap: wrap;
     
       li {
-        inline-size: 328px;
+        inline-size: calc((1600px - (2 * 16px)) / 5);
 
         .hhri-icon {
           font-size: 56px;
+          color: var(--md-sys-color-on-secondary-container);
+        }
+        .micl-list-item__headline {
+          color: var(--md-sys-color-on-secondary-container);
         }
       }
     }
@@ -68,11 +77,11 @@
 
   &> div {
     flex: 1;
-    background-color: var(--md-sys-color-secondary-container);
+    background-color: var(--md-sys-color-tertiary-container);
   }
   h2 {
     white-space: normal;
-    color: var(--md-sys-color-on-secondary-container);
+    color: var(--md-sys-color-on-tertiary-container);
     font-family: var(--md-sys-typescale-emphasized-title-medium-font);
     font-size: var(--md-sys-typescale-emphasized-title-medium-size);
     line-height: var(--md-sys-typescale-emphasized-title-medium-line-height);
@@ -81,6 +90,6 @@
   }
   .micl-card__supporting-text,
   .micl-card__content {
-    color: var(--md-sys-color-on-secondary-container);
+    color: var(--md-sys-color-on-tertiary-container);
   }
 }
