--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -105,7 +105,7 @@
           {% assign topic_text = topic | append: '_text' %}
           {% assign topic_list = topic | append: '_list' %}
           {% if site.data.menu[topic_title] %}
-            <div class="micl-card-outlined">
+            <div class="micl-card-filled">
               <div class="micl-card__headline-l">
                 <h2>{{ site.data.menu[topic_title] }}</h2>
               </div>
