--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -25,8 +25,8 @@ header:not(.micl-appbar) {
   background-color: inherit;
 }
 .hhri-theme-section {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(min(300px, 100%), 1fr));
   gap: 8px;
   padding: var(--md-sys-layout-window-margin);
   border-radius: var(--md-sys-shape-corner-medium);
@@ -45,9 +45,6 @@ header:not(.micl-appbar) {
   --statelayer-color: var(--md-sys-color-on-secondary-container);
   --md-sys-divider-space: 16px;
   --md-sys-divider-color: var(--md-sys-color-secondary-fixed-dim);
-  flex: 1;
-  max-inline-size: 100%;
-  min-inline-size: min(300px, 100%);
   background-color: var(--md-sys-color-secondary-container);
 
   summary {
