--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -34,9 +34,11 @@ header:not(.micl-appbar) {
   color: var(--md-sys-color-on-secondary-fixed);
 
   > h2 {
+    grid-column: 1 / -1;
     margin-block: 0;
   }
   > p {
+    grid-column: 1 / -1;
     margin-block: 0 16px;
   }
 }
