--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,7 +46,7 @@
         <header class="micl-appbar">
           <button type="button" class="micl-appbar__leading-icon micl-iconbutton-standard-s material-symbols-outlined" command="show-modal" commandfor="hhrimenu">menu</button>
         </header>
-        <header class="micl-pane__columns micl-pane__columns--stacked-to-expanded">
+        <header class="hhri-title micl-pane__columns micl-pane__columns--stacked-to-expanded">
           <div class="micl-pane__column">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 128 160" style="enable-background:new 0 0 128 160;" xml:space="preserve">
               <g>
@@ -75,7 +75,7 @@
             </svg>
           </div>
           <div class="micl-pane__column">
-            <p class="md-sys-typescale-display-medium">{{ page.title }}</p>
+            <h1 class="md-sys-typescale-display-medium">{{ page.title }}</h1>
             <p class="md-sys-typescale-headline-medium">{{ page.subtitle1 }}</p>
             <p class="md-sys-typescale-headline-medium">{{ page.subtitle2 }}</p>
           </div>
