--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -110,7 +110,9 @@
                 <h2>{{ site.data.menu[topic_title] }}</h2>
               </div>
               {% if site.data.menu[topic_text] %}
-                <p class="micl-card__supporting-text">{{ site.data.menu[topic_text] }}</p>
+                <p class="micl-card__supporting-text">
+                  <span class="md-sys-typography-body-medium">{{ site.data.menu[topic_text] }}</span>
+                </p>
               {% endif %}
               <div class="micl-card__content">
                 {% if site.data.menu[topic_list] %}
@@ -143,7 +145,6 @@
         <p>{{ site.data.footer.about_text }}</p>
       </div>
       <div>
-        <p>{{ site.data.footer.social_title }}</p>
         <div class="hhri-socials">
           {% for social in site.data.footer.social_list %}
             <a href="{{ social.link }}" target="_blank" class="micl-iconbutton-standard-m" aria-label="{{ social.title }}">{{ social.icon }}</a>
