--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@
 
     <dialog id="hhrimenu" class="micl-navigationrail" closedby="closerequest">
       <div class="micl-navigationrail__headline">
-        <button type="button" class="micl-iconbutton-standard-s micl-button--toggle material-symbols-outlined" command="close" commandfor="hhrimenu" data-miclalt="menu_open">menu</button>
+        <button type="button" class="micl-iconbutton-standard-s micl-button--toggle material-symbols-outlined" command="close" commandfor="hhrimenu">menu_open</button>
       </div>
       <div class="micl-navigationrail__content">
         {% assign topics = 'manual|theme|resource|etraining' | split: '|' %}
